--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-<<<<<<< HEAD
-  "name": "first-app",
-  "version": "0.1.0",
+  "name": "nodejscorse",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
@@ -14,13 +13,20 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "source-map-loader": "^5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "eslintConfig": {
     "extends": [
@@ -39,25 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-=======
-  "dependencies": {
-    "cors": "^2.8.5",
-    "date-fns": "^3.6.0",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1",
-    "nodemon": "^3.1.4"
   },
-  "name": "nodejscorse",
-  "version": "1.0.0",
   "main": "jquery-3.7.1.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": ""
->>>>>>> 3b13df7c023161f54f955b667b347478e7b79d30
 }
